--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: byollm
+description: byollm Docs
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://gungheap.github.io/byollm-docs/
 
 aux_links:
   "Download @ App Store": https://apps.apple.com/us/app/byollm/id6745411393
