--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: byollm
-description: byollm Docs
+title: LLM Power Tools
+description: LLM Power Tools Docs
 theme: just-the-docs
 
-url: https://gungheap.github.io/byollm-docs/
+url: https://gungheap.github.io/llm-power-tools-docs/
 
 aux_links:
   "Download @ App Store": https://apps.apple.com/us/app/byollm/id6745411393
